--- a/build.gradle
+++ b/build.gradle
@@ -155,6 +155,7 @@ postPublishedPluginToSlack{
 
 
 dependencies {
+    implementation 'junit:junit:4.13.1'
     testImplementation 'io.cucumber:cucumber-java:6.0.0'
     testImplementation 'io.cucumber:cucumber-junit:6.0.0'
     testImplementation 'junit:junit:4.12'
